# man-chan

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  client.py  compose-example.yaml  fmt.py  jp.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_magi.db  test_phrase.txt
alembic/: env.py
alembic/versions/: 0484fd8d3b0f_invoices.py  0ceecb67508a_invoices_aliases.py  15f83e2d0412_invoices.py  1b97a3238621_music_init3.py  298629fea1bc_social_credit.py  32656ad0b5aa_anilist_users.py  33ebe5556472_init_revision.py  4fbabf65b2a9_mapping_table.py  64c6b27ac6db_initial_revision.py  6525a2c33fb3_test.py  715dd6656ed9_music_init3.py  79934200269d_music_init3.py  (+9 more)
bot/: __init__.py  command_loader.py
cogs/: __init__.py  alias.py  anilist.py  base.py  commandbase.py  fun.py  greetings.py  halloffame.py  ledger.py  ledger_statboard.py  login.py  mediaconverter.py  music.py  reminder.py  reminder_cog.py  shareLink.py  socialcredit.py  test.py  xconverter.py
configs/: configs.py
db/: __init__.py  alias.py  anilist_users.py  base.py  connection.py  invoice_participants.py  invoices.py  playlist.py  playlistSong.py  radio.py  socialcredit.py  song.py
fetcher/: __init__.py  anilist.py  statboard_info.json  youtube.py
models/: __init__.py  anilist_queries.py  song.py
service/: __init__.py  anilist.py  base.py  interaction_base.py  login.py  socialcredit.py
utils/: __init__.py  config_mapper.py  context.py  distyping.py  ledger_utils.py  medialinkformatter.py  tools.py  uuid_gen.py  yaml_loader.py  yt_dl.py
(+11 files in other folders)
