[tool.poetry]
name = "man-chan"
version = "0.1.0"
description = "Simple discord bot for community of friends."
license = "MIT"
authors = ["furlongi, manuelgavino16, ssumachai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pyyaml = "^6.0.1"


[tool.poetry.group.discord.dependencies]
disnake = {extras = ["voice"], version = "2.9.0"}

[tool.poetry.group.db.dependencies]
alembic = "1.7.7"
sqlalchemy = "1.4.36"
sqlalchemy-stubs = "^0.4"

[tool.poetry.group.api.dependencies]
spotipy = "2.22.0"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pyright = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
